tests/tools/typecheck/positive/string_plus.nv
fn main() : void {
    let a : str = "hello";
    let b : str = " world";
    let c : str = a + b;
    print_str(c);
    return;
}
