tests/tools/typecheck/negative/return_type_mismatch.nv
fn f() : int {
    return "hello";
}

fn main() : void {
    return;
}
